RESOLVED FIXED127207
[Mac][WK2] Unable to play video protected by session cookies
https://bugs.webkit.org/show_bug.cgi?id=127207
Summary [Mac][WK2] Unable to play video protected by session cookies
Jer Noble
Reported 2014-01-17 17:12:28 PST
[Mac][WK2] Unable to play video protected by session cookies
Attachments
Patch (13.27 KB, patch)
2014-01-17 17:18 PST, Jer Noble
no flags
Patch (9.67 KB, patch)
2014-01-18 00:16 PST, Jer Noble
no flags
Patch (8.83 KB, patch)
2014-01-18 08:54 PST, Jer Noble
no flags
Patch (8.73 KB, patch)
2014-01-20 10:44 PST, Jer Noble
no flags
Patch (8.94 KB, patch)
2014-01-21 13:43 PST, Jer Noble
no flags
Jer Noble
Comment 1 2014-01-17 17:18:30 PST
Jer Noble
Comment 2 2014-01-18 00:16:04 PST
Jer Noble
Comment 3 2014-01-18 08:54:15 PST
Created attachment 221551 [details] Patch Pulled out SessionTracker now that #126918 got rolled out.
Alexey Proskuryakov
Comment 4 2014-01-18 10:24:49 PST
Hopefully SessionTracker will be re-landed soon, there is a clear path forward for how to resolve the bugs it initially caused.
Sam Weinig
Comment 5 2014-01-19 18:04:20 PST
Should we be doing this on all OS versions, or just 10.9?
Jer Noble
Comment 6 2014-01-20 10:19:56 PST
(In reply to comment #5) > Should we be doing this on all OS versions, or just 10.9? The patch should already bail out early if the overridden class doesn't exist, but I can add a check to make sure that the method also exists, so this should be safe to do everywhere.
Jer Noble
Comment 7 2014-01-20 10:44:50 PST
Jer Noble
Comment 8 2014-01-21 13:43:12 PST
Created attachment 221784 [details] Patch Fixed the Mac EWS bots.
WebKit Commit Bot
Comment 9 2014-01-22 10:24:54 PST
Comment on attachment 221784 [details] Patch Clearing flags on attachment: 221784 Committed r162531: <http://trac.webkit.org/changeset/162531>
WebKit Commit Bot
Comment 10 2014-01-22 10:24:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.